--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
           </p>
         </div>
         <div class="pages">
-          <a href="index.html" class="pagelinks">Work</a>
+          <a href="index.html" class="pagelinks">Home</a>
+          <a href="work.html" class="pagelinks">Work</a>
           <a href="about.html" class="pagelinks active">About</a>
           <a href="colophon.html" class="pagelinks">Colophon</a>
         </div>
@@ -49,13 +50,13 @@
           <a href="https://www.are.na/100m-studio" class="contactlinks"
             >are.na</a
           >
-          <a
+          <!-- <a
             href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
             id="change-ground"
             class="contactlinks"
             target="_blank"
             >add your background</a
-          >
+          > -->
         </div>
         <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
           <p id="inthere">↻</p>
