--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     ></script>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
+    <script src="archive.js" defer></script>
     <title>100m</title>
   </head>
   <body>
@@ -43,7 +44,8 @@
         </div>
         <div class="pagemain">
           <div class="pages">
-            <a href="" class="pagelinks active">Work</a>
+            <a href="index.html" class="pagelinks active">Home</a>
+            <a href="work.html" class="pagelinks">Work</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
@@ -54,13 +56,13 @@
             <a href="https://www.are.na/100m-studio" class="contactlinks"
               >are.na</a
             >
-            <a
+            <!-- <a
               href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
               id="change-ground"
               class="contactlinks"
               target="_blank"
               >add your background</a
-            >
+            > -->
           </div>
           <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
             <p id="inthere">↻</p>
@@ -79,6 +81,20 @@
         </div>
       </div>
       <div class="container-right">
+        <div class="header-right">
+          <div class="block-title">Open Studio — November 2nd</div>
+          <div class="block-content">
+            Join our weekly meeting!
+            <a href="https://news.100m.studio/" class="block-content-link">
+              Read more about it here
+            </a>
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24473507/original_03365cf2863cdabd9b49bd96e18b0302.gif?1698846611?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
         <div class="header-right">
           <div class="block-title">Joining 100m?!</div>
           <div class="block-content">
@@ -104,103 +120,12 @@
             src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
           />
         </div>
-
-        <!-- <div class="news-right">
-          <form
-            class="signup"
-            action="https://gmail.us14.list-manage.com/subscribe/post?u=2b0e6dd0639b50c91c05f0708&amp;id=10361293b7&amp;f_id=00b7bde0f0"
-            method="post"
-            name="mc-embedded-subscribe-form"
-            class="validate"
-            target="_blank"
-          >
-            <div>
-              <p id="signup-header">Sign up for our newsletter</p>
-              <div class="fields">
-                <div class="mc-field-group">
-                  <label for="mce-EMAIL"
-                    >Email Address:<span class="asterisk">*</span></label
-                  ><input
-                    type="email"
-                    name="EMAIL"
-                    class="required email text"
-                    id="mce-EMAIL"
-                    required=""
-                    value=""
-                  />
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-FNAME">First Name: </label
-                  ><input
-                    type="text"
-                    name="FNAME"
-                    class="text"
-                    id="mce-FNAME"
-                    value=""
-                  />
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-LNAME">Last Name: </label
-                  ><input
-                    type="text"
-                    name="LNAME"
-                    class="text"
-                    id="mce-LNAME"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div id="mce-responses" class="clear foot">
-                <div class="response" style="display: none"></div>
-                <div class="response" style="display: none"></div>
-              </div>
-              <div aria-hidden="true" style="position: absolute; left: -5000px">
-                /* real people should not fill this in and expect good things -
-                do not remove this or risk form bot signups */
-                <input
-                  type="text"
-                  name="b_2b0e6dd0639b50c91c05f0708_10361293b7"
-                  tabindex="-1"
-                  value=""
-                />
-              </div>
-              <div class="optionalParent">
-                <div class="clear foot">
-                  <input
-                    type="submit"
-                    name="subscribe"
-                    id="mc-embedded-subscribe"
-                    class="button"
-                    value="Join the newsletter!"
-                  />
-                </div>
-              </div>
-            </div>
-          </form>
-          <script
-            type="text/javascript"
-            src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
-          ></script>
-          <script type="text/javascript">
-            (function ($) {
-              window.fnames = new Array();
-              window.ftypes = new Array();
-              fnames[0] = "EMAIL";
-              ftypes[0] = "email";
-              fnames[1] = "FNAME";
-              ftypes[1] = "text";
-              fnames[2] = "LNAME";
-              ftypes[2] = "text";
-              fnames[3] = "ADDRESS";
-              ftypes[3] = "address";
-              fnames[4] = "PHONE";
-              ftypes[4] = "phone";
-              fnames[5] = "BIRTHDAY";
-              ftypes[5] = "birthday";
-            })(jQuery);
-            var $mcj = jQuery.noConflict(true);
-          </script>
-        </div> -->
+      </div>
+      <div class="container-side">
+        <div class="header-right-alter">
+          <div class="block-title alter">we're working</div>
+          <!-- <div class="block-content alter">What we create together:</div> -->
+        </div>
       </div>
     </div>
   </body>
