--- a/colophon.html
+++ b/colophon.html
@@ -39,7 +39,8 @@
           </p>
         </div>
         <div class="pages">
-          <a href="index.html" class="pagelinks">Work</a>
+          <a href="index.html" class="pagelinks">Home</a>
+          <a href="work.html" class="pagelinks">Work</a>
           <a href="about.html" class="pagelinks">About</a>
           <a href="colophon.html" class="pagelinks active">Colophon</a>
         </div>
@@ -87,12 +88,6 @@
                 Domain acquired through
                 <a href="https://www.namecheap.com/" class="block-content-link"
                   >namescheap.com</a
-                >
-              </li>
-              <li>
-                Newsletter running on
-                <a href="https://mailchimp.com/" class="block-content-link"
-                  >mailchimp</a
                 >
               </li>
             </ul>
