--- a/index.html
+++ b/index.html
@@ -82,11 +82,29 @@
       </div>
       <div class="container-right">
         <div class="header-right">
-          <div class="block-title">Open Studio — November 2nd</div>
+          <div class="block-title">Open Studio — November 9th</div>
           <div class="block-content">
             Join our weekly meeting!
             <a href="https://news.100m.studio/" class="block-content-link">
               Read more about it here
+            </a>
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24507778/original_50cdb750b37d85cb639d9d506629f083.jpg?1698987755?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
+          <div class="block-title">Open Studio — November 2nd</div>
+          <div class="block-content">
+            Thanks everyone who came to our first Open Studio meeting! <br />
+            <a
+              href="https://www.are.na/100m-studio/notes-open-studio-01-2023-11-02"
+              class="block-content-link alter"
+            >
+              Check out notes and posters here
             </a>
             <br />
             <img
