--- a/index.html
+++ b/index.html
@@ -82,11 +82,67 @@
       </div>
       <div class="container-right">
         <div class="header-right">
-          <div class="block-title">Open Studio — November 9th</div>
+          <div class="block-title">Open Studio 05 — November 30th</div>
           <div class="block-content">
-            Join our weekly meeting!
+            Join our last fall meeting!
             <a href="https://news.100m.studio/" class="block-content-link">
               Read more about it here
+            </a>
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
+          <div class="block-title">Open Studio 04 — November 23rd</div>
+          <div class="block-content">
+            Thanks everyone to everyone who joined the typeface workshop <br />
+            <a
+              href="https://www.are.na/100m-studio/notes-open-studio-04-2023-11-23"
+              class="block-content-link"
+            >
+              •• Meeting notes••
+            </a>
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24942737/original_7160c2e8e03c065b67c39860045145e6.gif?1701139144?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
+          <div class="block-title">Open Studio 03 — November 16th</div>
+          <div class="block-content">
+            Thanks for coming to the third meeting!
+
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24747610/original_64c4d503372eb6decb281db6fe6e56ac.gif?1700091920?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
+          <div class="block-title">Open Studio 02 — November 9th</div>
+          <div class="block-content">
+            Thanks everyone who came to our first Open Studio meeting! <br />
+            <a
+              href="https://vaskoso.github.io/Digital-Garden/"
+              class="block-content-link"
+            >
+              Link to our digital Garden
+            </a>
+            <br />
+            <a
+              href="https://www.are.na/100m-studio/notes-open-studio-02-2023-11-09"
+              class="block-content-link alter"
+            >
+              •• Meeting notes••
             </a>
             <br />
             <img
@@ -97,12 +153,12 @@
           </div>
         </div>
         <div class="header-right">
-          <div class="block-title">Open Studio — November 2nd</div>
+          <div class="block-title">Open Studio 01 — November 2nd</div>
           <div class="block-content">
             Thanks everyone who came to our first Open Studio meeting! <br />
             <a
               href="https://www.are.na/100m-studio/notes-open-studio-01-2023-11-02"
-              class="block-content-link alter"
+              class="block-content-link"
             >
               Check out notes and posters here
             </a>
