--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
     <title>100m</title>
   </head>
   <body>
-    <div class="popup">
-      <img src="" alt="" class="popup-content" />
+    <div class="popup update">
+      <div src="" alt="" class="popup-content update">
+        <span class="notice-container"></span>
+        <span class="notice small">check back in january!</span>
+      </div>
     </div>
-    <div class="main">
+    <div class="main updating">
       <div class="container-left">
         <div class="header">
           <p id="title" class="titleocad">
