--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
     <title>100m</title>
   </head>
   <body>
-    <div class="popup update">
-      <div src="" alt="" class="popup-content update">
-        <span class="notice-container"></span>
-        <span class="notice small">check back in january!</span>
-      </div>
+    <div class="popup">
+      <img src="" alt="" class="popup-content" />
     </div>
-    <div class="main updating">
-      <div class="container-left">
+    <div class="navbar">
+      <div class="navbar-container">
         <div class="header">
           <p id="title" class="titleocad">
             <!-- <sup>ocad</sup> -->
@@ -45,10 +42,26 @@
             ><span class="change">i</span><span class="change">o</span>
           </p>
         </div>
+        <div class="slider-container">
+          <input
+            type="range"
+            min="1"
+            max="100"
+            value="25"
+            class="slider"
+            id="myRange"
+          />
+        </div>
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks active">Home</a>
-            <a href="work.html" class="pagelinks">Work</a>
+            <a
+              href="index.html"
+              class="pagelinks"
+              style="color: rgb(215, 215, 215)"
+              >Work</a
+            >
+            <a href="projects.html" class="pagelinks">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
@@ -59,149 +72,47 @@
             <a href="https://www.are.na/100m-studio" class="contactlinks"
               >are.na</a
             >
-            <!-- <a
-              href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
-              id="change-ground"
-              class="contactlinks"
-              target="_blank"
-              >add your background</a
-            > -->
-          </div>
-          <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
-            <p id="inthere">↻</p>
-          </button> -->
-          <!-- <div class="pages third">
-            <p class="block-content-left">
-              You can change the background in this<a
-                href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
-                class="contactlinks bang"
-                >Google Sheet</a
-              >
-              <br />
-              make sure to refresh afterwards:
-            </p>
-          </div> -->
-        </div>
-      </div>
-      <div class="container-right">
-        <div class="header-right">
-          <div class="block-title">Open Studio 05 — November 30th</div>
-          <div class="block-content">
-            Join our last fall meeting!
-            <a href="https://news.100m.studio/" class="block-content-link">
-              Read more about it here
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 04 — November 23rd</div>
-          <div class="block-content">
-            Thanks everyone to everyone who joined the typeface workshop <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-04-2023-11-23"
-              class="block-content-link"
-            >
-              •• Meeting notes••
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24942737/original_7160c2e8e03c065b67c39860045145e6.gif?1701139144?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 03 — November 16th</div>
-          <div class="block-content">
-            Thanks for coming to the third meeting!
-
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24747610/original_64c4d503372eb6decb281db6fe6e56ac.gif?1700091920?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 02 — November 9th</div>
-          <div class="block-content">
-            Thanks everyone who came to our first Open Studio meeting! <br />
-            <a
-              href="https://vaskoso.github.io/Digital-Garden/"
-              class="block-content-link"
-            >
-              Link to our digital Garden
-            </a>
-            <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-02-2023-11-09"
-              class="block-content-link alter"
-            >
-              •• Meeting notes••
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24507778/original_50cdb750b37d85cb639d9d506629f083.jpg?1698987755?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 01 — November 2nd</div>
-          <div class="block-content">
-            Thanks everyone who came to our first Open Studio meeting! <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-01-2023-11-02"
-              class="block-content-link"
-            >
-              Check out notes and posters here
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24473507/original_03365cf2863cdabd9b49bd96e18b0302.gif?1698846611?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Joining 100m?!</div>
-          <div class="block-content">
-            <a
-              href="https://forms.office.com/r/GXufCZLkn2"
-              class="block-content-link"
-              >Fill this form </a
-            >to get updates from us! <br />
             <a
               href="https://chat.whatsapp.com/KrUpP9RoIeDKYu3ks2NNa0"
-              class="block-content-link"
-              >Open studio whatsapp </a
-            >link
+              class="contactlinks"
+              >join our whatsapp group</a
+            >
           </div>
         </div>
+      </div>
+    </div>
+    <div class="main">
+      <div class="container-right">
         <div class="header-right">
-          <p class="block-title">Our first meeting!</p>
-          <p class="block-content">
-            meet us october 26th, 100mcCaul — room 656, 6:30pm
-          </p>
-          <img
-            class="block-img"
-            src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
-          />
+          <div class="block-title">STUDENT PRESS REVIVAL</div>
+          <div class="block-content">
+            We are running it back! share your work and
+            <a
+              href="https://forms.office.com/Pages/ResponsePage.aspx?id=0WnkBiotj0aum33wlo621zswa4ibj5pHrQOJsEkzwClUMEFYWFVONUczSFJDUDYxVkVRRkkzOVpOOC4u"
+              class="block-content-link"
+            >
+              Submit through here!
+            </a>
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/25758721/original_42a67ee9ff0396252f59054abaf2adaf.jpg?1705525167?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
         </div>
       </div>
       <div class="container-side">
         <div class="header-right-alter">
-          <div class="block-title alter">we're working</div>
+          <div class="block-title alter">Coming up</div>
+          <img
+            class="block-img-side"
+            src="https://d2w9rnfcy7mm78.cloudfront.net/24655770/original_2358b7e0e80877bcc979fb1bce8082a1.png?1699684113?bc=0"
+          /><br />
+          <br />
+          <a href="https://news.100m.studio" class="coming-btn"
+            >learn more --></a
+          >
           <!-- <div class="block-content alter">What we create together:</div> -->
         </div>
       </div>
