--- a/colophon.html
+++ b/colophon.html
@@ -57,13 +57,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a
-              href="index.html"
-              class="pagelinks"
-              style="color: rgb(215, 215, 215)"
-              >Work</a
-            >
-            <a href="projects.html" class="pagelinks">Projects</a>
+            <a href="openstudio.html" class="pagelinks">Open studio</a>
+            <a href="index.html" class="pagelinks in">Work</a>
+            <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks active">Colophon</a>
           </div>
