--- a/index.html
+++ b/index.html
@@ -55,13 +55,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks active">Home</a>
-            <a
-              href="index.html"
-              class="pagelinks"
-              style="color: rgb(215, 215, 215)"
-              >Work</a
-            >
-            <a href="projects.html" class="pagelinks">Projects</a>
+            <a href="openstudio.html" class="pagelinks">Open studio</a>
+            <a href="index.html" class="pagelinks in">Work</a>
+            <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
@@ -83,6 +79,25 @@
     </div>
     <div class="main">
       <div class="container-right">
+        <div class="header-right">
+          <div class="block-title">Open studio 06 — February 1st</div>
+          <div class="block-content">
+            We are back! Join us for our first open studio of the year.
+            <br />
+            <div class="block-content alter">
+              Open studio is 100m's weekly meeting event, open for everyone to
+              join. We will organize screenings, workshops, and
+              collaborative-making events. Open studio is a chance for us to
+              meet peers, discuss projects, and design for our community.
+            </div>
+
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/25991231/original_a921213758c600302984fc89b8e7af40.jpg?1706509663?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
         <div class="header-right">
           <div class="block-title">STUDENT PRESS REVIVAL</div>
           <div class="block-content">
@@ -107,7 +122,7 @@
           <div class="block-title alter">Coming up</div>
           <img
             class="block-img-side"
-            src="https://d2w9rnfcy7mm78.cloudfront.net/24655770/original_2358b7e0e80877bcc979fb1bce8082a1.png?1699684113?bc=0"
+            src="https://d2w9rnfcy7mm78.cloudfront.net/25991231/original_a921213758c600302984fc89b8e7af40.jpg?1706509663?bc=0"
           /><br />
           <br />
           <a href="https://news.100m.studio" class="coming-btn"
