--- a/openstudio.html
+++ b/openstudio.html
@@ -57,17 +57,51 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="openstudio.html" class="pagelinks">Open studio</a>
+            <a href="openstudio.html" class="pagelinks active">Open studio</a>
             <a href="index.html" class="pagelinks in">Work</a>
             <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
+          </div>
+          <div class="pages second">
+            <a href="mailto:100mc.studio@gmail.com" class="contactlinks"
+              >email</a
+            >
+            <a href="https://www.are.na/100m-studio" class="contactlinks"
+              >are.na</a
+            >
+            <a
+              href="https://chat.whatsapp.com/KrUpP9RoIeDKYu3ks2NNa0"
+              class="contactlinks"
+              >join our whatsapp group</a
+            >
           </div>
         </div>
       </div>
     </div>
     <div class="main">
       <div class="container-right">
+        <div class="header-right open">
+          <div class="block-title open">Open studio!</div>
+          <div class="block-content open">
+            Open studio is 100m's weekly meeting event, open for everyone to
+            join. We will organize screenings, workshops, and
+            collaborative-making events. Open studio is a chance for us to meet
+            peers, discuss projects, and design for our community.
+            <br />
+            You have an idea for a workshop? a lecture? a screening? open studio
+            is all yours, just send us
+            <a href="mailto:100mc.studio@gmail.com" class="block-content-link">
+              an email
+            </a>
+            to plan and organize your event.
+            <!-- <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
+              alt=""
+              class="block-img"
+            /> -->
+          </div>
+        </div>
         <div class="header-right">
           <div class="block-title">Open Studio 05 — November 30th</div>
           <div class="block-content">
@@ -185,7 +219,7 @@
       </div>
       <div class="container-side">
         <div class="header-right-alter">
-          <div class="block-title alter">filters</div>
+          <div class="block-title alter">tags</div>
           <a href="https://news.100m.studio" class="filter-btn">Open studio</a>
           <!-- <div class="block-content alter">What we create together:</div> -->
         </div>
