--- a/about.html
+++ b/about.html
@@ -56,14 +56,10 @@
         </div>
         <div class="pagemain">
           <div class="pages">
-            <a href="index.html" class="pagelinks">Home</a>
-            <a
-              href="index.html"
-              class="pagelinks"
-              style="color: rgb(215, 215, 215)"
-              >Work</a
-            >
-            <a href="projects.html" class="pagelinks">Projects</a>
+            <a href="index.html" class="pagelinks active">Home</a>
+            <a href="openstudio.html" class="pagelinks">Open studio</a>
+            <a href="index.html" class="pagelinks in">Work</a>
+            <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks active">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
