--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         </div>
         <div class="pagemain">
           <div class="pages">
-            <a href="index.html" class="pagelinks active">Home</a>
+            <a href="index.html" class="pagelinks">Home</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
             <a href="index.html" class="pagelinks in">Work</a>
             <a href="index.html" class="pagelinks in">Projects</a>
