--- a/index.html
+++ b/index.html
@@ -82,14 +82,8 @@
         <div class="header-right">
           <div class="block-title">Open studio 06 — February 1st</div>
           <div class="block-content">
-            We are back! Join us for our first open studio of the year.
+            We are back! Join us for our first open studio meeting of the year.
             <br />
-            <div class="block-content alter">
-              Open studio is 100m's weekly meeting event, open for everyone to
-              join. We will organize screenings, workshops, and
-              collaborative-making events. Open studio is a chance for us to
-              meet peers, discuss projects, and design for our community.
-            </div>
 
             <img
               src="https://d2w9rnfcy7mm78.cloudfront.net/25991231/original_a921213758c600302984fc89b8e7af40.jpg?1706509663?bc=0"
