--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">Open studio 07 — February 29th</div>
+          <div class="block-content">
+            Weekly workshops are back again! Join us this week:
+            <br />
+
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/26612200/original_7d681c7d346dfecf519ea21b0294d935.jpg?1708975531?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">Open studio 06 — February 1st</div>
           <div class="block-content">
             We are back! Join us for our first open studio meeting of the year.
