--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
             <a href="https://www.are.na/100m-studio" class="contactlinks"
               >are.na</a
             >
+            <a href="https://www.instagram.com/100mstudio/" class="contactlinks"
+              >instagram</a
+            >
             <a
               href="https://chat.whatsapp.com/KrUpP9RoIeDKYu3ks2NNa0"
               class="contactlinks"
-              >join our whatsapp group</a
+              >whatsapp group</a
             >
           </div>
         </div>
