--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">Open studio 08 — March 7th</div>
+          <div class="block-content">
+            This week we are going on a field trip!
+            <br />
+
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/26756750/original_5e0ff84964fc59a6b062ff08ddd3fb84.jpg?1709557628?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">Open studio 07 — February 29th</div>
           <div class="block-content">
             Weekly workshops are back again! Join us this week:
