--- a/openstudio.html
+++ b/openstudio.html
@@ -57,7 +57,7 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="openstudio.html" class="pagelinks active}">Open studio</a>
+            <a href="openstudio.html" class="pagelinks active">Open studio</a>
             <a href="index.html" class="pagelinks in">Work</a>
             <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
