--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">STUDENT PRESS at the Pearl market</div>
+          <div class="block-content">
+            Drop by on March 25th, to get a copy of the STUDENT PRESS!
+            <br />
+
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/27070880/original_cc9386221131981d00ee2da08e22b3b4.jpg?1710864672?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">Open studio 08 — March 7th</div>
           <div class="block-content">
             This week we are going on a field trip!
