--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">How To Publish A Shirt?</div>
+          <div class="block-content">
+            Drop by on March 28th, to check out the workshop run by Radi!
+            <br />
+
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/27223711/original_aaccc8431f065cb9f5d6e4ff1b5dc2fe.jpg?1711562046?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">STUDENT PRESS at the Pearl market</div>
           <div class="block-content">
             Drop by on March 25th, to get a copy of the STUDENT PRESS!
