--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">100m Screenings!</div>
+          <div class="block-content">
+            Join us every Wednesday for free film screenings!
+
+            <br />
+            <a
+              href="https://films.100m.studio"
+              target="_blank"
+              class="block-content-link"
+            >
+              Check our website for more info!</a
+            >
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/28528328/original_7ebc7393ea798c3e075cf430c587864f.jpg?1717525600?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">How To Publish A Shirt?</div>
           <div class="block-content">
             Drop by on March 28th, to check out the workshop run by Radi!
@@ -168,15 +188,9 @@
       </div>
       <div class="container-side">
         <div class="header-right-alter">
-          <div class="block-title alter">Coming up</div>
-          <img
-            class="block-img-side"
-            src="https://d2w9rnfcy7mm78.cloudfront.net/25991231/original_a921213758c600302984fc89b8e7af40.jpg?1706509663?bc=0"
-          /><br />
+          <div class="block-title alter">Coming soon!</div>
           <br />
-          <a href="https://news.100m.studio" class="coming-btn"
-            >learn more --></a
-          >
+          <a href="" class="coming-btn">We're updating the website!</a>
           <!-- <div class="block-content alter">What we create together:</div> -->
         </div>
       </div>
