--- a/directory.html
+++ b/directory.html
@@ -21,16 +21,15 @@
       integrity="sha256-Lsk+CDPOzTapLoAzWW0G/WeQeViS3FMzywpzPZV8SXk="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
     <script src="archive.js" defer></script>
-    <title>100m — work</title>
+    <title>100m</title>
   </head>
   <body>
     <div class="popup">
-      <div src="" alt="" class="popup-content">
-        <span class="notice-container"></span>
-      </div>
+      <img src="" alt="" class="popup-content" />
     </div>
     <div class="navbar">
       <div class="navbar-container">
@@ -41,7 +40,8 @@
             ><span class="change">0</span><span class="change">m</span
             ><span class="change"> S</span><span class="change">t</span
             ><span class="change">u</span><span class="change">d</span
-            ><span class="change">i</span><span class="change">o</span>
+            ><span class="change">i</span><span class="change">o</span
+            ><span class="change">s</span>
           </p>
         </div>
         <div class="slider-container">
@@ -58,9 +58,9 @@
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
             <a href="https://feed.100m.studio" class="pagelinks">Feed</a>
-            <a href="directory.html" class="pagelinks">Directory</a>
+            <a href="directory.html" class="pagelinks active">Directory</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
-            <a href="about.html" class="pagelinks active">About</a>
+            <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
           <div class="pages second">
@@ -78,22 +78,26 @@
       </div>
     </div>
     <div class="main">
-      <div class="container-right">
-        <div class="header-right">
-          <div class="block-title about">
-            <span class="mtag">100m </span>is a student-run studio collective at
-            OCAD that aims to support co-operation within our community.<span
-              class="mtag"
+      <div class="container-right-dir">
+        <div
+          class="header-right-dir"
+          style="background: white; border: 1px solid black"
+        >
+          <div class="block-title-dir" style="color: blue">
+            <a
+              href="https://docs.google.com/spreadsheets/d/1-7IxAa5T8SfntggC4yUCDKyGSxL81q3OEWvo6Pftm_k/edit?gid=0#gid=0"
+              style="text-decoration-thickness: none; color: blue"
+              >Add to the google sheets</a
             >
-              100m</span
-            >
-            is an ever-growing network of self-governing studios that aim to
-            create a space fostering interconnection among students from various
-            disciplines to publish, share, create and cultivate a communal
-            practice —to bring to life projects we deeply care about.
           </div>
-          <div class="header-right-alter-gallery"></div>
         </div>
+        <!-- <div class="container-side">
+        <div class="header-right-alter">
+          <div class="block-title alter">Coming soon!</div>
+          <br />
+          <a href="" class="coming-btn">We're updating the website!</a>
+        </div>
+      </div> -->
       </div>
     </div>
   </body>
