--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             ><span class="change">0</span><span class="change">m</span
             ><span class="change"> S</span><span class="change">t</span
             ><span class="change">u</span><span class="change">d</span
-            ><span class="change">i</span><span class="change">o</span>
+            ><span class="change">i</span><span class="change">o</span
+            ><span class="change">s</span>
           </p>
         </div>
         <div class="slider-container">
@@ -55,9 +56,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks active">Home</a>
+            <a href="https://feed.100m.studio" class="pagelinks">Feed</a>
+            <a href="directory.html" class="pagelinks">Directory</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
-            <a href="index.html" class="pagelinks in">Work</a>
-            <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
@@ -182,14 +183,13 @@
           </div>
         </div>
       </div>
-      <div class="container-side">
+      <!-- <div class="container-side">
         <div class="header-right-alter">
           <div class="block-title alter">Coming soon!</div>
           <br />
           <a href="" class="coming-btn">We're updating the website!</a>
-          <!-- <div class="block-content alter">What we create together:</div> -->
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
