--- a/colophon.html
+++ b/colophon.html
@@ -57,9 +57,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
+            <a href="https://feed.100m.studio" class="pagelinks">Feed</a>
+            <a href="directory.html" class="pagelinks">Directory</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
-            <a href="index.html" class="pagelinks in">Work</a>
-            <a href="index.html" class="pagelinks in">Projects</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks active">Colophon</a>
           </div>
